--- a/app/views/loggedin/cat.phtml
+++ b/app/views/loggedin/cat.phtml
@@ -13,7 +13,7 @@
     <!-- adding bootstrap theme css-->
     <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/bootstrap-theme.css" />
     <!-- external page css -->
-    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/stylekategori.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/bookesma.com/css/show.css" />
 </head>
 <body>
 <div class="topnav" id="top-nav" style="z-index: 99;">
