--- a/app/views/index/show404.phtml
+++ b/app/views/index/show404.phtml
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page not found &middot; booKesma</title>
     <!-- Icon -->
-	<link rel="icon" type="icon/image" href="img/jpgpng/favicon.png">
+	<link rel="icon" type="icon/image" href="<?=$this->url->getBaseUri()?>/img/jpgpng/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- adding bootstrap css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap.css" />
     <!-- adding bootstrap theme css-->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-theme.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/bootstrap-theme.css" />
     <!-- external page css -->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/show404.css" />   
+    <link rel="stylesheet" type="text/css" media="screen" href="<?=$this->url->getBaseUri()?>/css/show404.css" />   
 </head>
 <body>
     <div class="container">
         <div class="content">
-            <img src="img/svg/notfounded.svg" alt="notfound">
+            <img src="<?=$this->url->getBaseUri()?>/img/svg/notfounded.svg" alt="notfound">
             <div class="title">
                 Maaf halaman yang kamu cari saat ini tidak ada.
                 <a style="color: #0a0e29" href="<?=$this->url->getBaseUri()?>"> Kembali.</a>
@@ -26,8 +26,8 @@
         </div>
     </div>
     <!-- adding jquery -->
-    <script src="js/jquery-3.3.1.js"></script>
+    <script src="<?=$this->url->getBaseUri()?>/js/jquery-3.3.1.js"></script>
     <!-- adding bootstrap -->
-    <script src="js/bootstrap.js"></script>
+    <script src="<?=$this->url->getBaseUri()?>/js/bootstrap.js"></script>
 </body>
 </html>
