--- a/app/views/loggedin/time.phtml
+++ b/app/views/loggedin/time.phtml
@@ -65,27 +65,27 @@
                 </a>
             </div>
             <div class="col-sm-4">
-                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal2">
+                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal">
                     <img src="<?=$this->url->getBaseUri()?>/img/p2.jpg">
                 </a>
             </div>
             <div class="col-sm-4">
-                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal3">
+                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal">
                     <img src="<?=$this->url->getBaseUri()?>/img/p3.jpg">
                 </a>
             </div>
             <div class="col-sm-4">
-                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal4">
+                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal">
                     <img src="<?=$this->url->getBaseUri()?>/img/p4.jpg">
                 </a>
             </div>
             <div class="col-sm-4">
-                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal5">
+                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal">
                     <img src="<?=$this->url->getBaseUri()?>/img/p5.jpg">
                 </a>
             </div>
             <div class="col-sm-4">
-                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal6">
+                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal">
                     <img src="<?=$this->url->getBaseUri()?>/img/p6.jpg">
                 </a>
             </div>
@@ -102,101 +102,14 @@
                 <div class="modal-body">
                     <p>Some text in the modal.</p>
                 </div>
+
             <div class="modal-footer">
+                    <a href="<?=$this->url->getBaseuri()?>user/koleksi/semester/<?=$sem?>/1" class="btn btn-primary">Reservasi</a>
                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
-    </div>
-    </div>
-        <!-- Modal content2-->
-        <div id="myModal2" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                     <h4 class="modal-title">Modal Header</h4>
-                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-            <div class="modal-footer">
-                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-        </div>
-    </div>
-        <!-- Modal content3-->
-        <div id="myModal3" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                     <h4 class="modal-title">Modal Header</h4>
-                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-            <div class="modal-footer">
-                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-        </div>
-    </div>
-        <!-- Modal content4-->
-        <div id="myModal4" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                     <h4 class="modal-title">Modal Header</h4>
-                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-            <div class="modal-footer">
-                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-        </div>
-    </div>
-        <!-- Modal content5-->
-        <div id="myModal5" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                     <h4 class="modal-title">Modal Header</h4>
-                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-            <div class="modal-footer">
-                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-        </div>
-    </div>
-        <!-- Modal content6-->
-        <div id="myModal6" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                     <h4 class="modal-title">Modal Header</h4>
-                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-            <div class="modal-footer">
-                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-        </div>
-    </div>
-  </div>
     </div>
 </section>
 <br><br>
-<!-- buku -->
 </body>
 </html>
