--- a/app/views/loggedout/time.phtml
+++ b/app/views/loggedout/time.phtml
@@ -102,6 +102,7 @@
                     <p>Some text in the modal.</p>
                 </div>
             <div class="modal-footer">
+            <a href="<?=$this->url->getBaseuri()?>user/koleksi/semester/<?=$sem?>/1" class="btn btn-primary">Reservasi</a>
                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
