--- a/app/views/loggedout/time.phtml
+++ b/app/views/loggedout/time.phtml
@@ -58,142 +58,41 @@
 <section class="daftar" id="daftar" style="margin-left:5%;">
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
-                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal">
-                    <img src="<?=$this->url->getBaseUri()?>img/p1.jpg">
-                </a>
-            </div>
-            <div class="col-sm-4">
-                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal2">
-                    <img src="<?=$this->url->getBaseUri()?>img/p2.jpg">
-                </a>
-            </div>
-            <div class="col-sm-4">
-                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal3">
-                    <img src="<?=$this->url->getBaseUri()?>img/p3.jpg">
-                </a>
-            </div>
-            <div class="col-sm-4">
-                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal4">
-                    <img src="<?=$this->url->getBaseUri()?>img/p4.jpg">
-                </a>
-            </div>
-            <div class="col-sm-4">
-                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal5">
-                    <img src="<?=$this->url->getBaseUri()?>img/p5.jpg">
-                </a>
-            </div>
-            <div class="col-sm-4">
-                <a href="" class="thumbnail" data-toggle="modal" data-target="#myModal6">
-                    <img src="<?=$this->url->getBaseUri()?>img/p6.jpg">
-                </a>
-            </div>
-        </div>
-
-        <!-- Modal content1-->
-        <div id="myModal" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                     <h4 class="modal-title">Modal Header</h4>
-                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
+            <?php
+                if ($buku) {
+                    foreach ($buku as $b) {
+            ?>
+                <div class="col-sm-4">
+                    <a href="" class="thumbnail" data-toggle="modal" data-target="#modal<?=$b->id_buku;?>">
+                        <img src="<?=$this->url->getBaseUri()?>/<?=$b->gambar;?>">
+                    </a>
                 </div>
-            <div class="modal-footer">
-            <a href="<?=$this->url->getBaseuri()?>user/koleksi/semester/<?=$sem?>/1" class="btn btn-primary">Reservasi</a>
-                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-    </div>
-        <!-- Modal content2-->
-        <div id="myModal2" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                     <h4 class="modal-title">Modal Header</h4>
-                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
+                <!-- Modal content-->
+                <div id="modal<?=$b->id_buku;?>" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Modal Header</h4>
+                        </div>
+                        <div class="modal-body">
+                            <p>Judul Buku : <br> <?=$b->judul_buku;?></p>
+                            <p>Jumlah Halaman : <br> <?=$b->jumlah_halaman;?></p>
+                            <p>Deskripsi Buku : <br> <?=$b->deskripsi_buku;?></p>
+                            <p>Tersedia : <br> <?=$b->tersedia;?></p>
+                        </div>
+                    <div class="modal-footer">
+                            <a href="<?=$this->url->getBaseuri()?>user/koleksi/semester/<?=$sem?>/<?=$b->id_buku;?>" class="btn btn-primary">Reservasi</a>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                    </div>
+                    </div>
                 </div>
-            <div class="modal-footer">
-                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
+            <?php
+                    }
+                }
+            ?>
         </div>
-        </div>
-    </div>
-        <!-- Modal content3-->
-        <div id="myModal3" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                     <h4 class="modal-title">Modal Header</h4>
-                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-            <div class="modal-footer">
-                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-        </div>
-    </div>
-        <!-- Modal content4-->
-        <div id="myModal4" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                     <h4 class="modal-title">Modal Header</h4>
-                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-            <div class="modal-footer">
-                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-        </div>
-    </div>
-        <!-- Modal content5-->
-        <div id="myModal5" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                     <h4 class="modal-title">Modal Header</h4>
-                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-            <div class="modal-footer">
-                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-        </div>
-    </div>
-        <!-- Modal content6-->
-        <div id="myModal6" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                     <h4 class="modal-title">Modal Header</h4>
-                 </div>
-                <div class="modal-body">
-                    <p>Some text in the modal.</p>
-                </div>
-            <div class="modal-footer">
-                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-        </div>
-    </div>
-  </div>
     </div>
 </section>
 <br><br>
